tests/invalid/ii_parent.ii_child.m
:- module ii_parent.ii_child.
:- interface.

:- instance foo(int, string).

:- implementation.

:- instance foo(int, string) where [].
